set input fontsize to 16 to prevent zoom on ios

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ html {
   background-color: var(--main-bg);
 }
 
+input {
+  font-size: 16px;
+}
+
 /*#endregion */
 
 /*#region App layout */
